--- a/setup.cfg
+++ b/setup.cfg
@@ -37,6 +37,7 @@ install_requires =
     scikit-image>=0.22.0
     toolz>=0.12.0
     scikit-learn>=1.3.2
+    pyclesperanto-prototype
     psygnal>=0.9.5
     superqt>=0.6.1
     zarr>=2.16.1
