add starfile writer for points

--- a/setup.cfg
+++ b/setup.cfg
@@ -40,6 +40,7 @@ install_requires =
     pyclesperanto-prototype
     psygnal>=0.9.5
     superqt>=0.6.1
+    starfile
     zarr>=2.16.1
     xgboost>=2
     matplotlib>=3.8.2
