switch to setuptools_scm for versioning

--- a/setup.cfg
+++ b/setup.cfg
@@ -49,8 +49,7 @@ python_requires = >=3.8
 include_package_data = True
 package_dir =
     =src
-
-# add your package requirements here
+setup_requires = setuptools_scm
 
 [options.packages.find]
 where = src
