--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,9 @@ requires = ["setuptools>=42.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 
+[tool.setuptools_scm]
+write_to = "src/cellcanvas/_version.py"
+
 
 [tool.black]
 line-length = 79
